[USGNLARCH-362] Fix searchbox on IE 11, because of IE flexbox bugs

--- a/src/searchbox.less
+++ b/src/searchbox.less
@@ -28,12 +28,12 @@
     }
 
     .searchbox-input-area {
-        flex: 1;
+        flex: 1 0 auto;
         display: flex;
         align-items: stretch;
         min-width: 300px;
         .searchbox-icon-wrapper {
-            flex: 0;
+            flex: 0 0 auto;
             display: flex;
             align-items: center;
         }
